# sdm-modbus-reader

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.example.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
.github/workflows/: docker-build.yml
sdm_modbus_reader/: __main__.py  api.py  bootstrap.py  data_store.py  main.py  mqtt_adapter.py  reader.py  repository.py  run.py  sdm_modbus_reader.py
sdm_modbus_reader/adapters/: __init__.py  memory_repository.py  modbus_reader.py  mqtt_publisher.py
sdm_modbus_reader/application/: __init__.py  meter_service.py
sdm_modbus_reader/domain/: __init__.py  meter_data.py  models.py  register_maps.py
sdm_modbus_reader/ports/: __init__.py  message_publisher.py  meter_reader.py  reading_repository.py
sdm_modbus_reader/templates/: index.html
tests/: __init__.py  conftest.py  test_bootstrap.py  test_domain_models.py  test_memory_repository.py  test_meter_service.py  test_modbus_reader.py  test_mqtt_publisher.py
