[project]
name = "sdm-modbus-reader"
version = "0.1.0"
description = "read sdm120m and sdm630"
authors = [{name = "Jelle Victoor", email = "jelle@victoor.io"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymodbus>=3.11.1",
    "paho-mqtt>=2.1.0",
    "pyserial>=3.5",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "typer>=0.12.0",
#]
#
#[project.optional-dependencies]
#test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0"
]