[project]
name = "sdm-modbus-reader"
version = "0.1.0"
description = "SDM Modbus meter reader with hexagonal architecture"
authors = [{name = "Jelle Victoor", email = "jelle@victoor.io"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymodbus>=3.11.1",
    "paho-mqtt>=2.1.0",
    "pyserial>=3.5",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "typer>=0.12.0",
]

[project.scripts]
sdm-reader = "sdm_modbus_reader.main:app"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"